fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -141,7 +141,7 @@ footer {
 }
 .chatroom {
   width: 60%;
-  height: 100vh;
+  height: 80vh;
   background-color: rgba(255, 255, 255, 0.16);
   float: left;
   padding: 3%;
@@ -206,8 +206,16 @@ footer {
   width: 80%;
   font-size: 1.0vw;
   padding: 0.8vw;
+  margin: 2%;
+  margin-top: 4%;
+  margin-left: 6%;
 }
 .textbox-input:hover {
+  background-color: #55555541;
+  transition: background-color .2s;
+  box-shadow: 0px 0px 7px 0.5px;
+}
+.textbox-input:focus {
   background-color: #55555541;
   transition: background-color .2s;
   box-shadow: 0px 0px 7px 0.5px;
